# Custom-Enhancify-aapt2-binary

./: .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: release.yml
cmake/: CMakeLists.txt  FindThreads.cmake
